assignment-5/ass5_20CS10082_20CS30029/y.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH


Grammar

    0 $accept: translation_unit $end

    1 constant: INTEGER_CONSTANT
    2         | FLOATING_CONSTANT
    3         | ENUMERATION_CONSTANT
    4         | CHARACTER_CONSTANT

    5 postfix_expression: primary_expression
    6                   | postfix_expression SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
    7                   | postfix_expression ROUND_BRACKET_OPEN ROUND_BRACKET_CLOSE
    8                   | postfix_expression ROUND_BRACKET_OPEN argument_expression_list ROUND_BRACKET_CLOSE
    9                   | postfix_expression DOT IDENTIFIER
   10                   | postfix_expression ARROW IDENTIFIER
   11                   | postfix_expression INCREMENT
   12                   | postfix_expression DECREMENT
   13                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
   14                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

   15 selection_statement: IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N
   16                    | IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N ELSE M statement
   17                    | SWITCH ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement

   18 unary_operator: BITWISE_AND
   19               | MULTIPLY
   20               | ADD
   21               | SUBTRACT
   22               | BITWISE_NOT
   23               | LOGICAL_NOT

   24 cast_expression: unary_expression
   25                | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE cast_expression

   26 multiplicative_expression: cast_expression
   27                          | multiplicative_expression MULTIPLY cast_expression
   28                          | multiplicative_expression DIVIDE cast_expression
   29                          | multiplicative_expression MODULUS cast_expression

   30 additive_expression: multiplicative_expression
   31                    | additive_expression ADD multiplicative_expression
   32                    | additive_expression SUBTRACT multiplicative_expression

   33 shift_expression: additive_expression
   34                 | shift_expression LEFT_SHIFT additive_expression
   35                 | shift_expression RIGHT_SHIFT additive_expression

   36 declaration_specifiers: storage_class_specifier declaration_specifiers
   37                       | storage_class_specifier
   38                       | type_specifier declaration_specifiers
   39                       | type_specifier
   40                       | type_qualifier declaration_specifiers
   41                       | type_qualifier
   42                       | function_specifier declaration_specifiers
   43                       | function_specifier

   44 equality_expression: relational_expression
   45                    | equality_expression EQUAL_TO relational_expression
   46                    | equality_expression NOT_EQUAL_TO relational_expression

   47 AND_expression: equality_expression
   48               | AND_expression BITWISE_AND equality_expression

   49 exclusive_OR_expression: AND_expression
   50                        | exclusive_OR_expression BITWISE_XOR AND_expression

   51 inclusive_OR_expression: exclusive_OR_expression
   52                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   53 logical_AND_expression: inclusive_OR_expression
   54                       | logical_AND_expression N LOGICAL_AND M inclusive_OR_expression

   55 logical_OR_expression: logical_AND_expression
   56                      | logical_OR_expression N LOGICAL_OR M logical_AND_expression

   57 M: %empty

   58 N: %empty

   59 conditional_expression: logical_OR_expression
   60                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   61 assignment_expression: conditional_expression
   62                      | unary_expression assignment_operator assignment_expression

   63 primary_expression: IDENTIFIER
   64                   | constant
   65                   | STRING_LITERAL
   66                   | ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE

   67 assignment_operator: ASSIGNMENT
   68                    | MULTIPLY_ASSIGNMENT
   69                    | DIVIDE_ASSIGNMENT
   70                    | MODULUS_ASSIGNMENT
   71                    | ADD_ASSIGNMENT
   72                    | SUBTRACT_ASSIGNMENT
   73                    | LEFT_SHIFT_ASSIGNMENT
   74                    | RIGHT_SHIFT_ASSIGNMENT
   75                    | BITWISE_AND_ASSIGNMENT
   76                    | BITWISE_XOR_ASSIGNMENT
   77                    | BITWISE_OR_ASSIGNMENT

   78 expression: assignment_expression
   79           | expression COMMA assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers init_declarator_list SEMICOLON
   82            | declaration_specifiers SEMICOLON

   83 init_declarator_list: init_declarator
   84                     | init_declarator_list COMMA init_declarator

   85 init_declarator: declarator
   86                | declarator ASSIGNMENT initializer

   87 storage_class_specifier: EXTERN
   88                        | STATIC
   89                        | AUTO
   90                        | REGISTER

   91 type_specifier: VOID
   92               | CHAR
   93               | SHORT
   94               | INT
   95               | LONG
   96               | FLOAT
   97               | DOUBLE
   98               | SIGNED
   99               | UNSIGNED
  100               | _BOOL
  101               | _COMPLEX
  102               | _IMAGINARY
  103               | enum_specifier

  104 specifier_qualifier_list: type_specifier specifier_qualifier_list
  105                         | type_specifier
  106                         | type_qualifier specifier_qualifier_list
  107                         | type_qualifier

  108 enum_specifier: ENUM IDENTIFIER CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  109               | ENUM CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  110               | ENUM IDENTIFIER CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  111               | ENUM CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  112               | ENUM IDENTIFIER

  113 enumerator_list: enumerator
  114                | enumerator_list COMMA enumerator

  115 enumerator: IDENTIFIER
  116           | IDENTIFIER ASSIGNMENT constant_expression

  117 type_qualifier: CONST
  118               | RESTRICT
  119               | VOLATILE

  120 function_specifier: INLINE

  121 declarator: pointer direct_declarator
  122           | direct_declarator

  123 direct_declarator: IDENTIFIER
  124                  | ROUND_BRACKET_OPEN declarator ROUND_BRACKET_CLOSE
  125                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  126                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list SQUARE_BRACKET_CLOSE
  127                  | direct_declarator SQUARE_BRACKET_OPEN assignment_expression SQUARE_BRACKET_CLOSE
  128                  | direct_declarator SQUARE_BRACKET_OPEN SQUARE_BRACKET_CLOSE
  129                  | direct_declarator SQUARE_BRACKET_OPEN STATIC type_qualifier_list assignment_expression SQUARE_BRACKET_CLOSE
  130                  | direct_declarator SQUARE_BRACKET_OPEN STATIC assignment_expression SQUARE_BRACKET_CLOSE
  131                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list MULTIPLY SQUARE_BRACKET_CLOSE
  132                  | direct_declarator SQUARE_BRACKET_OPEN MULTIPLY SQUARE_BRACKET_CLOSE
  133                  | direct_declarator ROUND_BRACKET_OPEN CT parameter_type_list ROUND_BRACKET_CLOSE
  134                  | direct_declarator ROUND_BRACKET_OPEN identifier_list ROUND_BRACKET_CLOSE
  135                  | direct_declarator ROUND_BRACKET_OPEN CT ROUND_BRACKET_CLOSE

  136 CT: %empty

  137 pointer: MULTIPLY type_qualifier_list
  138        | MULTIPLY
  139        | MULTIPLY type_qualifier_list pointer
  140        | MULTIPLY pointer

  141 type_qualifier_list: type_qualifier
  142                    | type_qualifier_list type_qualifier

  143 argument_expression_list: assignment_expression
  144                         | argument_expression_list COMMA assignment_expression

  145 relational_expression: shift_expression
  146                      | relational_expression LESS_THAN shift_expression
  147                      | relational_expression GREATER_THAN shift_expression
  148                      | relational_expression LESS_THAN_OR_EQUAL_TO shift_expression
  149                      | relational_expression GREATER_THAN_OR_EQUAL_TO shift_expression

  150 unary_expression: postfix_expression
  151                 | INCREMENT unary_expression
  152                 | DECREMENT unary_expression
  153                 | unary_operator cast_expression
  154                 | SIZEOF unary_expression
  155                 | SIZEOF ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE

  156 parameter_type_list: parameter_list
  157                    | parameter_list COMMA ELLIPSIS

  158 parameter_list: parameter_declaration
  159               | parameter_list COMMA parameter_declaration

  160 parameter_declaration: declaration_specifiers declarator
  161                      | declaration_specifiers

  162 identifier_list: IDENTIFIER
  163                | identifier_list COMMA IDENTIFIER

  164 type_name: specifier_qualifier_list

  165 initializer: assignment_expression
  166            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  167            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  168 initializer_list: designation initializer
  169                 | initializer
  170                 | initializer_list COMMA designation initializer
  171                 | initializer_list COMMA initializer

  172 designation: designator_list ASSIGNMENT

  173 designator_list: designator
  174                | designator_list designator

  175 designator: SQUARE_BRACKET_OPEN constant_expression SQUARE_BRACKET_CLOSE
  176           | DOT IDENTIFIER

  177 statement: labeled_statement
  178          | compound_statement
  179          | expression_statement
  180          | selection_statement
  181          | iteration_statement
  182          | jump_statement

  183 labeled_statement: IDENTIFIER COLON statement
  184                  | CASE constant_expression COLON statement
  185                  | DEFAULT COLON statement

  186 compound_statement: CURLY_BRACKET_OPEN block_item_list CURLY_BRACKET_CLOSE
  187                   | CURLY_BRACKET_OPEN CURLY_BRACKET_CLOSE

  188 block_item_list: block_item
  189                | block_item_list M block_item

  190 block_item: declaration
  191           | statement

  192 expression_statement: expression SEMICOLON
  193                     | SEMICOLON

  194 iteration_statement: WHILE M ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE M statement
  195                    | DO M statement M WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  196                    | FOR ROUND_BRACKET_OPEN expression_statement M expression_statement ROUND_BRACKET_CLOSE M statement
  197                    | FOR ROUND_BRACKET_OPEN expression_statement M expression_statement M expression N ROUND_BRACKET_CLOSE M statement

  198 jump_statement: GOTO IDENTIFIER SEMICOLON
  199               | CONTINUE SEMICOLON
  200               | BREAK SEMICOLON
  201               | RETURN expression SEMICOLON
  202               | RETURN SEMICOLON

  203 translation_unit: external_declaration
  204                 | translation_unit external_declaration

  205 external_declaration: function_definition
  206                     | declaration

  207 function_definition: declaration_specifiers declarator declaration_list CT compound_statement
  208                    | declaration_specifiers declarator CT compound_statement

  209 declaration_list: declaration
  210                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 89
    BREAK (259) 200
    CASE (260) 184
    CHAR (261) 92
    CONST (262) 117
    CONTINUE (263) 199
    DEFAULT (264) 185
    DO (265) 195
    DOUBLE (266) 97
    ELSE (267) 16
    ENUM (268) 108 109 110 111 112
    EXTERN (269) 87
    FLOAT (270) 96
    FOR (271) 196 197
    GOTO (272) 198
    IF (273) 15 16
    INLINE (274) 120
    INT (275) 94
    LONG (276) 95
    REGISTER (277) 90
    RESTRICT (278) 118
    RETURN (279) 201 202
    SHORT (280) 93
    SIGNED (281) 98
    SIZEOF (282) 154 155
    STATIC (283) 88 129 130
    STRUCT (284)
    SWITCH (285) 17
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 99
    VOID (289) 91
    VOLATILE (290) 119
    WHILE (291) 194 195
    _BOOL (292) 100
    _COMPLEX (293) 101
    _IMAGINARY (294) 102
    SQUARE_BRACKET_OPEN (295) 6 125 126 127 128 129 130 131 132 175
    SQUARE_BRACKET_CLOSE (296) 6 125 126 127 128 129 130 131 132 175
    ROUND_BRACKET_OPEN (297) 7 8 13 14 15 16 17 25 66 124 133 134 135 155 194 195 196 197
    ROUND_BRACKET_CLOSE (298) 7 8 13 14 15 16 17 25 66 124 133 134 135 155 194 195 196 197
    CURLY_BRACKET_OPEN (299) 13 14 108 109 110 111 166 167 186 187
    CURLY_BRACKET_CLOSE (300) 13 14 108 109 110 111 166 167 186 187
    DOT (301) 9 176
    ARROW (302) 10
    INCREMENT (303) 11 151
    DECREMENT (304) 12 152
    BITWISE_AND (305) 18 48
    MULTIPLY (306) 19 27 131 132 137 138 139 140
    ADD (307) 20 31
    SUBTRACT (308) 21 32
    BITWISE_NOT (309) 22
    LOGICAL_NOT (310) 23
    DIVIDE (311) 28
    MODULUS (312) 29
    LEFT_SHIFT (313) 34
    RIGHT_SHIFT (314) 35
    LESS_THAN (315) 146
    GREATER_THAN (316) 147
    LESS_THAN_OR_EQUAL_TO (317) 148
    GREATER_THAN_OR_EQUAL_TO (318) 149
    EQUAL_TO (319) 45
    NOT_EQUAL_TO (320) 46
    BITWISE_XOR (321) 50
    BITWISE_OR (322) 52
    LOGICAL_AND (323) 54
    LOGICAL_OR (324) 56
    QUESTION_MARK (325) 60
    COLON (326) 60 183 184 185
    SEMICOLON (327) 81 82 192 193 195 198 199 200 201 202
    ELLIPSIS (328) 157
    ASSIGNMENT (329) 67 86 116 172
    MULTIPLY_ASSIGNMENT (330) 68
    DIVIDE_ASSIGNMENT (331) 69
    MODULUS_ASSIGNMENT (332) 70
    ADD_ASSIGNMENT (333) 71
    SUBTRACT_ASSIGNMENT (334) 72
    LEFT_SHIFT_ASSIGNMENT (335) 73
    RIGHT_SHIFT_ASSIGNMENT (336) 74
    BITWISE_AND_ASSIGNMENT (337) 75
    BITWISE_XOR_ASSIGNMENT (338) 76
    BITWISE_OR_ASSIGNMENT (339) 77
    COMMA (340) 14 79 84 110 111 114 144 157 159 163 167 170 171
    HASH (341)
    IDENTIFIER <symp> (342) 9 10 63 108 110 112 115 116 123 162 163 176 183 198
    STRING_LITERAL <charval> (343) 65
    CHARACTER_CONSTANT <charval> (344) 4
    ENUMERATION_CONSTANT <charval> (345) 3
    FLOATING_CONSTANT <charval> (346) 2
    INTEGER_CONSTANT <intval> (347) 1
    THEN (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    constant <symp> (95)
        on left: 1 2 3 4
        on right: 64
    postfix_expression <A> (96)
        on left: 5 6 7 8 9 10 11 12 13 14
        on right: 6 7 8 9 10 11 12 150
    selection_statement <S> (97)
        on left: 15 16 17
        on right: 180
    unary_operator <unary_operator> (98)
        on left: 18 19 20 21 22 23
        on right: 153
    cast_expression <A> (99)
        on left: 24 25
        on right: 25 26 27 28 29 153
    multiplicative_expression <E> (100)
        on left: 26 27 28 29
        on right: 27 28 29 30 31 32
    additive_expression <E> (101)
        on left: 30 31 32
        on right: 31 32 33 34 35
    shift_expression <E> (102)
        on left: 33 34 35
        on right: 34 35 145 146 147 148 149
    declaration_specifiers (103)
        on left: 36 37 38 39 40 41 42 43
        on right: 36 38 40 42 81 82 160 161 207 208
    equality_expression <E> (104)
        on left: 44 45 46
        on right: 45 46 47 48
    AND_expression <E> (105)
        on left: 47 48
        on right: 48 49 50
    exclusive_OR_expression <E> (106)
        on left: 49 50
        on right: 50 51 52
    inclusive_OR_expression <E> (107)
        on left: 51 52
        on right: 52 53 54
    logical_AND_expression <E> (108)
        on left: 53 54
        on right: 54 55 56
    logical_OR_expression <E> (109)
        on left: 55 56
        on right: 56 59 60
    M <instr> (110)
        on left: 57
        on right: 15 16 54 56 60 189 194 195 196 197
    N <S> (111)
        on left: 58
        on right: 15 16 54 56 60 197
    conditional_expression <E> (112)
        on left: 59 60
        on right: 60 61 80
    assignment_expression <E> (113)
        on left: 61 62
        on right: 62 78 79 125 127 129 130 143 144 165
    primary_expression <E> (114)
        on left: 63 64 65 66
        on right: 5
    assignment_operator (115)
        on left: 67 68 69 70 71 72 73 74 75 76 77
        on right: 62
    expression <E> (116)
        on left: 78 79
        on right: 6 15 16 17 60 66 79 192 194 195 197 201
    constant_expression (117)
        on left: 80
        on right: 116 175 184
    declaration (118)
        on left: 81 82
        on right: 190 206 209 210
    init_declarator_list (119)
        on left: 83 84
        on right: 81 84
    init_declarator <symp> (120)
        on left: 85 86
        on right: 83 84
    storage_class_specifier (121)
        on left: 87 88 89 90
        on right: 36 37
    type_specifier (122)
        on left: 91 92 93 94 95 96 97 98 99 100 101 102 103
        on right: 38 39 104 105
    specifier_qualifier_list (123)
        on left: 104 105 106 107
        on right: 104 106 164
    enum_specifier (124)
        on left: 108 109 110 111 112
        on right: 103
    enumerator_list (125)
        on left: 113 114
        on right: 108 109 110 111 114
    enumerator (126)
        on left: 115 116
        on right: 113 114
    type_qualifier (127)
        on left: 117 118 119
        on right: 40 41 106 107 141 142
    function_specifier (128)
        on left: 120
        on right: 42 43
    declarator <symp> (129)
        on left: 121 122
        on right: 85 86 124 160 207 208
    direct_declarator <symp> (130)
        on left: 123 124 125 126 127 128 129 130 131 132 133 134 135
        on right: 121 122 125 126 127 128 129 130 131 132 133 134 135
    CT (131)
        on left: 136
        on right: 133 135 207 208
    pointer <symtp> (132)
        on left: 137 138 139 140
        on right: 121 139 140
    type_qualifier_list (133)
        on left: 141 142
        on right: 125 126 129 131 137 139 142
    argument_expression_list <intval> (134)
        on left: 143 144
        on right: 8 144
    relational_expression <E> (135)
        on left: 145 146 147 148 149
        on right: 44 45 46 146 147 148 149
    unary_expression <A> (136)
        on left: 150 151 152 153 154 155
        on right: 24 62 151 152 154
    parameter_type_list (137)
        on left: 156 157
        on right: 133
    parameter_list (138)
        on left: 158 159
        on right: 156 157 159
    parameter_declaration (139)
        on left: 160 161
        on right: 158 159
    identifier_list (140)
        on left: 162 163
        on right: 134 163
    type_name (141)
        on left: 164
        on right: 13 14 25 155
    initializer <symp> (142)
        on left: 165 166 167
        on right: 86 168 169 170 171
    initializer_list (143)
        on left: 168 169 170 171
        on right: 13 14 166 167 170 171
    designation (144)
        on left: 172
        on right: 168 170
    designator_list (145)
        on left: 173 174
        on right: 172 174
    designator (146)
        on left: 175 176
        on right: 173 174
    statement <S> (147)
        on left: 177 178 179 180 181 182
        on right: 15 16 17 183 184 185 191 194 195 196 197
    labeled_statement <S> (148)
        on left: 183 184 185
        on right: 177
    compound_statement <S> (149)
        on left: 186 187
        on right: 178 207 208
    block_item_list <S> (150)
        on left: 188 189
        on right: 186 189
    block_item <S> (151)
        on left: 190 191
        on right: 188 189
    expression_statement <E> (152)
        on left: 192 193
        on right: 179 196 197
    iteration_statement <S> (153)
        on left: 194 195 196 197
        on right: 181
    jump_statement <S> (154)
        on left: 198 199 200 201 202
        on right: 182
    translation_unit (155)
        on left: 203 204
        on right: 0 204
    external_declaration (156)
        on left: 205 206
        on right: 203 204
    function_definition (157)
        on left: 207 208
        on right: 205
    declaration_list (158)
        on left: 209 210
        on right: 207 210


State 0

    0 $accept: . translation_unit $end

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    declaration_specifiers   go to state 22
    declaration              go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   89 storage_class_specifier: AUTO .

    $default  reduce using rule 89 (storage_class_specifier)


State 2

   92 type_specifier: CHAR .

    $default  reduce using rule 92 (type_specifier)


State 3

  117 type_qualifier: CONST .

    $default  reduce using rule 117 (type_qualifier)


State 4

   97 type_specifier: DOUBLE .

    $default  reduce using rule 97 (type_specifier)


State 5

  108 enum_specifier: ENUM . IDENTIFIER CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  109               | ENUM . CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  110               | ENUM . IDENTIFIER CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  111               | ENUM . CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  112               | ENUM . IDENTIFIER

    CURLY_BRACKET_OPEN  shift, and go to state 32
    IDENTIFIER          shift, and go to state 33


State 6

   87 storage_class_specifier: EXTERN .

    $default  reduce using rule 87 (storage_class_specifier)


State 7

   96 type_specifier: FLOAT .

    $default  reduce using rule 96 (type_specifier)


State 8

  120 function_specifier: INLINE .

    $default  reduce using rule 120 (function_specifier)


State 9

   94 type_specifier: INT .

    $default  reduce using rule 94 (type_specifier)


State 10

   95 type_specifier: LONG .

    $default  reduce using rule 95 (type_specifier)


State 11

   90 storage_class_specifier: REGISTER .

    $default  reduce using rule 90 (storage_class_specifier)


State 12

  118 type_qualifier: RESTRICT .

    $default  reduce using rule 118 (type_qualifier)


State 13

   93 type_specifier: SHORT .

    $default  reduce using rule 93 (type_specifier)


State 14

   98 type_specifier: SIGNED .

    $default  reduce using rule 98 (type_specifier)


State 15

   88 storage_class_specifier: STATIC .

    $default  reduce using rule 88 (storage_class_specifier)


State 16

   99 type_specifier: UNSIGNED .

    $default  reduce using rule 99 (type_specifier)


State 17

   91 type_specifier: VOID .

    $default  reduce using rule 91 (type_specifier)


State 18

  119 type_qualifier: VOLATILE .

    $default  reduce using rule 119 (type_qualifier)


State 19

  100 type_specifier: _BOOL .

    $default  reduce using rule 100 (type_specifier)


State 20

  101 type_specifier: _COMPLEX .

    $default  reduce using rule 101 (type_specifier)


State 21

  102 type_specifier: _IMAGINARY .

    $default  reduce using rule 102 (type_specifier)


State 22

   81 declaration: declaration_specifiers . init_declarator_list SEMICOLON
   82            | declaration_specifiers . SEMICOLON
  207 function_definition: declaration_specifiers . declarator declaration_list CT compound_statement
  208                    | declaration_specifiers . declarator CT compound_statement

    ROUND_BRACKET_OPEN  shift, and go to state 34
    MULTIPLY            shift, and go to state 35
    SEMICOLON           shift, and go to state 36
    IDENTIFIER          shift, and go to state 37

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    direct_declarator     go to state 41
    pointer               go to state 42


State 23

  206 external_declaration: declaration .

    $default  reduce using rule 206 (external_declaration)


State 24

   36 declaration_specifiers: storage_class_specifier . declaration_specifiers
   37                       | storage_class_specifier .

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 37 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   38 declaration_specifiers: type_specifier . declaration_specifiers
   39                       | type_specifier .

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 39 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  103 type_specifier: enum_specifier .

    $default  reduce using rule 103 (type_specifier)


State 27

   40 declaration_specifiers: type_qualifier . declaration_specifiers
   41                       | type_qualifier .

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 41 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   42 declaration_specifiers: function_specifier . declaration_specifiers
   43                       | function_specifier .

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 43 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit . $end
  204 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 47
    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    declaration_specifiers   go to state 22
    declaration              go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  203 translation_unit: external_declaration .

    $default  reduce using rule 203 (translation_unit)


State 31

  205 external_declaration: function_definition .

    $default  reduce using rule 205 (external_declaration)


State 32

  109 enum_specifier: ENUM CURLY_BRACKET_OPEN . enumerator_list CURLY_BRACKET_CLOSE
  111               | ENUM CURLY_BRACKET_OPEN . enumerator_list COMMA CURLY_BRACKET_CLOSE

    IDENTIFIER  shift, and go to state 49

    enumerator_list  go to state 50
    enumerator       go to state 51


State 33

  108 enum_specifier: ENUM IDENTIFIER . CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  110               | ENUM IDENTIFIER . CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  112               | ENUM IDENTIFIER .

    CURLY_BRACKET_OPEN  shift, and go to state 52

    $default  reduce using rule 112 (enum_specifier)


State 34

  124 direct_declarator: ROUND_BRACKET_OPEN . declarator ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 34
    MULTIPLY            shift, and go to state 35
    IDENTIFIER          shift, and go to state 37

    declarator         go to state 53
    direct_declarator  go to state 41
    pointer            go to state 42


State 35

  137 pointer: MULTIPLY . type_qualifier_list
  138        | MULTIPLY .
  139        | MULTIPLY . type_qualifier_list pointer
  140        | MULTIPLY . pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18
    MULTIPLY  shift, and go to state 35

    $default  reduce using rule 138 (pointer)

    type_qualifier       go to state 54
    pointer              go to state 55
    type_qualifier_list  go to state 56


State 36

   82 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 82 (declaration)


State 37

  123 direct_declarator: IDENTIFIER .

    $default  reduce using rule 123 (direct_declarator)


State 38

   81 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   84 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMICOLON  shift, and go to state 57
    COMMA      shift, and go to state 58


State 39

   83 init_declarator_list: init_declarator .

    $default  reduce using rule 83 (init_declarator_list)


State 40
